# h20_yaskawa_arm

./: .gitattributes  README.md  commands_to_run.txt
ws_moveit/src/goal_pose_executor/: CMakeLists.txt  package.xml  poses.yaml
ws_moveit/src/goal_pose_executor/launch/: goal_pose_executor.launch.py
ws_moveit/src/goal_pose_executor/src/: goal_pose_executor.cpp
ws_moveit/src/hc30pl_pick_place/: CMakeLists.txt  package.xml
ws_moveit/src/hc30pl_pick_place/src/: pick_place_coordinator.cpp
ws_moveit/src/hc30pl_workcell_description/: CMakeLists.txt  package.xml
ws_moveit/src/hc30pl_workcell_description/meshes/environment/: Grundrahmen-mit-Sockel.stl  Kuststoffbox.stl  Tray250ml-Palette.stl
ws_moveit/src/hc30pl_workcell_description/urdf/: fix_names.py  hc20dtp_macro.xacro  hc30pl.xacro  hc30pl_macro.xacro  workcell.xacro
ws_moveit/src/hc30pl_workcell_moveit_config/: CMakeLists.txt  package.xml
ws_moveit/src/hc30pl_workcell_moveit_config/config/: hc30pl_workcell.srdf
ws_moveit/src/hc30pl_workcell_moveit_config/launch/: demo.launch.py
ws_moveit/src/hello_moveit/: package.xml
ws_moveit/src/hello_moveit/src/: hello_moveit.cpp
ws_moveit/src/motoman_hc20_support/: CMakeLists.txt  package.xml
ws_moveit/src/motoman_hc20_support/config/: hc20.srdf  hc20_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
ws_moveit/src/motoman_hc20_support/launch/: display.launch.py  display.rviz  gazebo.launch.py  moveit.launch.py  pick_place.launch.py
ws_moveit/src/motoman_hc20_support/scripts/: joint_state_relay.py
ws_moveit/src/motoman_hc20_support/urdf/: hc20.xacro  hc20_macro.xacro
